--- a/html/baskeballProjectPage.html
+++ b/html/baskeballProjectPage.html
@@ -10,18 +10,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
-        <div class="container">
-            <a class="navbar-brand fs-5 ms-md-3 " href="./index.html">
-                <img src="./images/logo1.png" alt="Logo" class="ms-5 monogram">
+        <div class="container josefin-sans-bold">
+            <a class="navbar-brand fs-5 ms-md-3 " href="../index.html">
+                <img src="../images/logo1.png" alt="Logo" class="ms-5 monogram">
                 Simcha Lapp
             </a>
-    
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+
+            <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,49 +37,50 @@
                         <a class="nav-link" href=""></a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </nav>
+
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Online Currency Exchange Login</p>
-                    <p class=" header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="hero_header josefin-slab">Summer Basketball League Login</p>
+                    <p class=" header_text josefin-sans">A simple and clean login page for a summer basketball league.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="./projects/Project 4/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Basketball_Project/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="./images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="../images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="../images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="../images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
     <section id="project_section">
-        <img src="./images/project4_snip.png" alt="project 4 screenshot" class="screenshot d-md-block d-none">
-        <img src="./images/project4_snip_mobile.png" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/project1_snip.png" alt="project 1 screenshot" class="screenshot d-none d-md-block ">
+        <img src="../images/project1_snip_mobile.png" alt="project 1 screenshot " class="screenshot d-md-none d-sm-block ">
     </section>
 
     <footer>
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="./images/email_icon.png" alt=""></div>
+                    <div><img src="../images/email_icon.png" alt=""></div>
                     <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="./images/phone_icon.png" alt=""></div>
+                    <div><img src="../images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="./images/linkedin_icon.png" alt=""></div>
+                    <div><img src="../images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
