--- a/html/codingProjectPage.html
+++ b/html/codingProjectPage.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
@@ -18,12 +18,12 @@
         <header class="nav_container sticky-top">
             <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
                 <div class="container">
-                    <a class="navbar-brand fs-5 ms-md-3 " href="./index.html">
-                        <img src="./images/logo1.png" alt="Logo" class="ms-5 monogram">
+                    <a class="navbar-brand fs-5 ms-md-3 " href="../index.html">
+                        <img src="../images/logo1.png" alt="Logo" class="ms-5 monogram">
                         Simcha Lapp
                     </a>
         
-                    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href=""></a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </nav>
     </header>
@@ -52,23 +52,23 @@
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file<button>
-                <button class="btn_styling"><a href="./projects/Project 2/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Coding_Project/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="./images/img-HTML.png" alt="html icon"></div>
-            <div class="coding_icons"><img src="./images/img-CSS.png" alt="css icon"></div>
-            <div class="coding_icons"><img src="./images/img-SASS.png" alt="css icon"></div>
+            <div class="coding_icons"><img src="../images/img-HTML.png" alt="html icon"></div>
+            <div class="coding_icons"><img src="../images/img-CSS.png" alt="css icon"></div>
+            <div class="coding_icons"><img src="../images/img-SASS.png" alt="css icon"></div>
         </div>
     </section>
 
 
     <section id="project_section">
-        <img src="./images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
-        <img src="./images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
+        <img src="../images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
     
 
@@ -76,15 +76,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="./images/email_icon.png" alt=""></div>
+                    <div><img src="../images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="./images/phone_icon.png" alt=""></div>
+                    <div><img src="../images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="./images/linkedin_icon.png" alt=""></div>
+                    <div><img src="../images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
