--- a/html/currencyProjectPage.html
+++ b/html/currencyProjectPage.html
@@ -44,8 +44,8 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Online Currency Exchange Login</p>
-                    <p class=" header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h1 class="hero_header"">Online Currency Exchange Login</h1>
+                <p class=" header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
