--- a/html/deliveryProjectPage.html
+++ b/html/deliveryProjectPage.html
@@ -41,11 +41,11 @@
         </div>
     </nav>
 
-    <section id="hero_section" class="project_text">
+    <section id="hero_section">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Delivery Service Homepage</p>
-                    <p class=" header_text"">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
+                <h1 class="hero_header">Delivery Service Homepage</h1>
+                <p class="header_text">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
