--- a/html/travelProjectPage.html
+++ b/html/travelProjectPage.html
@@ -44,7 +44,7 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Travel Company</p>
+                <h1 class="hero_header"">Travel Company</h1>
                     <p class=" header_text"">A stylish and eye-catching feedback form. Built using HTML and CSS.
                 </p>
             </div>
