--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
 
             <div class="hero_text">
-                <p class="hero_header josefin-sans-bold">Welcome To My Portfolio</p>
-                <p class="header_text josefin-sans-bold">Here you will find information about me, past projects I have
+                <h1 class="hero_header josefin-bold">Welcome To My Portfolio</h1>
+                <p class="header_text josefin-light">Here you will find information about me, past projects I have
                     worked on,
                     and be able to reach out and contact me in case you want to work together. Looking foward to hearing
                     from you!</p>
@@ -80,26 +80,28 @@
     </section>
 
     <section id="aboutMe_section">
-        <div class="aboutMe_box">
-            <div class="aboutMe_text">
-                <h2 class="josefin-sans-bold">About Me</h2>
-                <p class="josefin-sans-light">I am studying to be a fullstack web developer with a focus on beautiful and visually complex designs. As of now, I have learnt HTML, CSS, SASS, and Bootstrap. I am also familiar with other fields and programs, such as Figma, Adobe Illustrator, and DaVinci Resolve.</p>
-                <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my resume</a></button>
+        <div class="aboutMe_container">
+            <div class="aboutMe_wrapper">
+                <div class="aboutMe_text">
+                    <h2 class="josefin-bold">About Me</h2>
+                    <p class="josefin-light">I am studying to be a fullstack web developer with a focus on beautiful and visually complex designs. As of now, I have learnt HTML, CSS, SASS, and Bootstrap. I am also familiar with other fields and programs, such as Figma, Adobe Illustrator, and DaVinci Resolve.</p>
+                    <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my resume</a></button>
+                </div>
+                <img src="./images/profile pic.jpg" alt="" class="aboutMe_img">
             </div>
-            <img src="./images/profile pic.jpg" alt="" class="aboutMe_img">
         </div>
     </section>
 
     <section id="my_projects" class="project_section">
-        <h2 class="section_header josefin-sans-bold">My Projects</h2>
+        <h2 class="project_header josefin-bold">My Projects</h2>
 
         <div class="project_card_area">
 
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Delivery Company Homepage</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    <h3 class="project_card_title josefin-bold">Delivery Company Homepage</h3>
+                    <p class="josefin-light"> class="josefin-light"Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         <p />
                         <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
                 </div>
@@ -108,8 +110,8 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Travel Agency Contact Page</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <h3 class="project_card_title josefin-bold">Travel Agency Contact Page</h3>
+                    <p class="josefin-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
                 </div>
             </div>
@@ -117,10 +119,19 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Coding Course Sign Up</h3>
-                    <p>A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.
+                    <h3 class="project_card_title josefin-bold">Coding Course Sign Up</h3>
+                    <p class="josefin-light">A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.
                     </p>
                     <button class="btn_styling"><a href="./html/codingProjectPage.html">Project Page</a></button>
+                </div>
+            </div>
+
+            <div class="project_card">
+                <div class="project_card_img"><img src="" alt=""></div>
+                <div class="project_card_text">
+                    <h3 class="project_card_title josefin-bold">Consulting Firm Contact Page</h3>
+                    <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap and SASS.</p>
+                    <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -128,8 +139,8 @@
                 <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
             
                 <div class="project_card_text">
-                    <h3 class="project_card_title josefin-sans-bold">Basketball League Login Page</h3>
-                    <p class="josefin-sans-light"> A youthful and fun login page for a summer basketball league. Built
+                    <h3 class="project_card_title josefin-bold">Basketball League Login Page</h3>
+                    <p class="josefin-light"> A youthful and fun login page for a summer basketball league. Built
                         with HTML and CSS.</p>
                     <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
                 </div>
@@ -138,8 +149,8 @@
             <div class="project_card" id="project_card3">
                 <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Zoo Newsletter</h3>
-                    <p>An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML and CSS.</p>
+                    <h3 class="project_card_title josefin-bold">Zoo Newsletter</h3>
+                    <p class="josefin-light">An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML and CSS.</p>
                     <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
                 </div>
             </div>
@@ -147,8 +158,8 @@
             <div class="project_card">
                 <div class="project_card_img cardimg"><img src="./images/coins.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Currency Exchange</h3>
-                    <p>Modern and clean sign in for an online currrency exchange. Built with HTML, CSS, and Bootstrap.
+                    <h3 class="project_card_title josefin-bold">Currency Exchange</h3>
+                    <p class="josefin-light">Modern and clean sign in for an online currrency exchange. Built with HTML, CSS, and Bootstrap.
                     </p>
                     <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
                 </div>
@@ -174,7 +185,7 @@
                     <textarea name="" id="contact_message" cols="50" rows="5"></textarea>
                 </div>
 
-                <input type="submit" class="form_submit" id="contact_submit">
+                <input type="submit" class="form_submit btn_styling" id="contact_submit">
             </form>
         </div>
     </section>
