--- a/html/baskeballProjectPage.html
+++ b/html/baskeballProjectPage.html
@@ -45,8 +45,8 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header josefin-slab">Summer Basketball League Login</p>
-                    <p class=" header_text josefin-sans">A simple and clean login page for a summer basketball league.</p>
+                <h1 class="hero_header">Summer Basketball League Login</h1>
+                    <p class="header_text">A simple and clean login page for a summer basketball league.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
