--- a/html/codingProjectPage.html
+++ b/html/codingProjectPage.html
@@ -47,7 +47,7 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Coding Course Sign Up</p>
+                <h1 class="hero_header"">Coding Course Sign Up</h1>
                     <p class=" header_text"">A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.</p>
             </div>
             <div class="hero_buttons">
