--- a/html/consultingProjectPage.html
+++ b/html/consultingProjectPage.html
@@ -9,23 +9,22 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../projects/Zoo_Project/styles/main.css">
-
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-75">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
+        <div class="container josefin-sans-bold">
             <a class="navbar-brand fs-5 ms-md-3 " href="../index.html">
                 <img src="../images/logo1.png" alt="Logo" class="ms-5 monogram">
                 Simcha Lapp
             </a>
 
-            <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -44,15 +43,17 @@
         </div>
     </nav>
 
+
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <h1 class="hero_header"">Zoo Newsletter Sign Up</h1>
-                    <p class=" header_text">Fun and interesting newsletter sign up for a zoo.</p>
+                <h1 class="hero_header josefin-slab">Consulting Firm Contact Form</h1>
+                <p class=" header_text josefin-sans">A funky contact form for a consulting agency.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="../projects/Zoo_Project/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Consulting_Project/index.html">View the project
+                        page</a></button>
             </div>
         </div>
     </section>
@@ -62,31 +63,13 @@
             <div class="coding_icons"><img src="../images/img-HTML.png" alt=""></div>
             <div class="coding_icons"><img src="../images/img-CSS.png" alt=""></div>
             <div class="coding_icons"><img src="../images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="../images/img-SASS.png" alt=""></div>
         </div>
     </section>
 
-    <section class="project_section"">
-        <div class=" green_bg main_container_project">
-        <div class="grid">
-            <div id="welcome">
-                <div id="text">
-                    <h2>Welcome to the Israel Zoo</h2>
-                    <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
-                </div>
-
-                <div id="sign_up">
-                    <h2>Sign Up to Our Newsletter</h2>
-                    <input type="text" placeholder="Name" id="info">
-                    <input type="email" name="" id="info" placeholder="Email">
-                    <input type="submit" value="Sign Up" id="submit">
-                </div>
-            </div>
-
-            <div id="image1"></div>
-            <div id="image2"></div>
-            <div id="image3"></div>
-        </div>
-        </div>
+    <section id="project_section">
+        <img src="../images/project7_snip.png" alt="project screenshot" class="screenshot d-none d-md-block ">
+        <img src="" alt="project screenshot " class="screenshot d-md-none d-sm-block ">
     </section>
 
     <footer>
@@ -94,7 +77,7 @@
             <div class="footer_box">
                 <div class="footer_items">
                     <div><img src="../images/email_icon.png" alt=""></div>
-                    <p>slapp62@gmail.com</p>
+                    <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
                     <div><img src="../images/phone_icon.png" alt=""></div>
