consulting project mobile

--- a/projects/Consulting_Project/index.html
+++ b/projects/Consulting_Project/index.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <div class="whatsapp social">
+    <div class="whatsapp social d-md-flex d-none">
         <img src="./images/whatsapp-icon.png" alt="whatsapp-icon" height="40px">
     </div>
     <div class="container-fluid">
         <div class="row justify-content-end">
-            <div class="col-4 top-line"></div>
+            <div class="col-md-4 col-sm-12 top-line"></div>
         </div>
 
-        <div class="row mt-5">
-            <div class="col-7 d-flex flex-column justify-content-center align-items-end">
+        <div class="row mt-5 d-flex flex-md-row flex-column-reverse">
+            <div class="col-md-7 col-sm-12 d-flex flex-column justify-content-center align-items-end">
                 <div class="text_container text-end">
                     <h1>ייעוץ חינם</h1>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-5">
+            <div class="col">
                 <img src="./images/Image 1.png" alt="phone" class="ms-5 phone">
             </div>
         </div>
