consulting project mibile fixes

--- a/html/consultingProjectPage.html
+++ b/html/consultingProjectPage.html
@@ -68,8 +68,8 @@
     </section>
 
     <section id="project_section">
-        <img src="../images/project7_snip.png" alt="project screenshot" class="screenshot d-none d-md-block ">
-        <img src="" alt="project screenshot " class="screenshot d-md-none d-sm-block ">
+        <img src="../images/consultingProjectSnip.png" alt="project screenshot" class="screenshot d-none d-md-block ">
+        <img src="../images/consultingProjectMobileSnip.png" alt="project screenshot " class="screenshot d-md-none d-sm-block ">
     </section>
 
     <footer>
