--- a/projects/Consulting_Project/index.html
+++ b/projects/Consulting_Project/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container-fluid">
         <div class="row justify-content-end">
-            <div class="col-md-4 col-sm-12 top-line"></div>
+            <div class="col-md-4 top-line"></div>
         </div>
 
         <div class="row mt-5 d-flex flex-md-row flex-column-reverse">
@@ -26,7 +26,7 @@
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
                 </div>
 
-                <div class="form d-flex flex-column text-end w-75">
+                <div class="form d-flex flex-column text-end">
                     <div class="row">
                         <div class="col d-flex flex-column ">
                             <label for="name">שם מלא</label>
@@ -41,17 +41,17 @@
                     <label for="message">הודעה</label>
                     <textarea name="message" id="message" rows="5" class="field"></textarea>
 
-                    <button type="submit" class="p-2 ms-auto mt-5 submit w-25">שליחה</button>
+                    <button type="submit" class="p-2 ms-auto mt-4 submit">שליחה</button>
                 </div>
             </div>
 
-            <div class="col">
-                <img src="./images/Image 1.png" alt="phone" class="ms-5 phone">
+            <div class="col phone_box">
+                <img src="./images/Image 1.png" alt="phone" class="phone">
             </div>
         </div>
 
         <div class="row">
-            <div class="col-4 d-flex gap-5 my-4 align-items-center justify-content-center">
+            <div class="col-md-4 col-12 d-flex gap-4 my-4 align-items-center justify-content-center">
                 <div class="social"><img src="./images/fb2_icon.png" alt="" height="40">
                 </div>
 
