homepage design updates

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
+    <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="home">
     <header class="nav_container sticky-top">
-        <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary josefin-sans-bold bg-opacity-50">
+        <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-50">
             <div class="container">
-                <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                    <img src="./images/logo1.png" alt="Logo" class="ms-5 monogram">
+                <img src="./images/logo1.png" alt="Logo" class="ms-5 logo">
+                <a class="navbar-brand ms-md-3" href="index.html">
                     Simcha Lapp
                 </a>
 
@@ -63,33 +64,28 @@
         </div>
     </section>
 
-    <section id="icon_section">
-        <div class="icon_container">
-            <div class="coding_icons"><img src="./images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-Bootstrap.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-SASS.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-JS.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-NodeJS.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-React.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-API.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-ES6.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-TypeScript.png" alt=""></div>
-            <div class="coding_icons"><img src="./images/img-OOP.png" alt=""></div>
-        </div>
-    </section>
-
     <section id="aboutMe_section">
         <div class="aboutMe_container">
             <div class="aboutMe_wrapper">
                 <div class="aboutMe_text">
                     <h2 class="josefin-bold">About Me</h2>
                     <p class="josefin-light">I am studying to be a fullstack web developer with a focus on beautiful and
-                        visually complex designs. As of now, I have learnt HTML, CSS, SASS, and Bootstrap. I am also
-                        familiar with other fields and programs, such as Figma, Adobe Illustrator, and DaVinci Resolve.
+                        visually complex designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also done some studying of UI design and am familiar with Figma and Adobe Illustrator.
                     </p>
                     <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my
                             resume</a></button>
+
+                    <div class="icon_container">
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-figma"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-bootstrap"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-sass"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-js"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-node"></i></div>
+                        <div class="coding_icons"><i class="fa-brands fa-3x fa-react"></i></div>
+                    </div>
+
                 </div>
                 <img src="./images/profile pic.jpg" alt="" class="aboutMe_img">
             </div>
@@ -133,7 +129,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="" alt=""></div>
+                <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title josefin-bold">Consulting Firm Contact Page</h3>
                     <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
@@ -212,7 +208,7 @@
                 </div>
                 <div class="footer_items linked_in">
                     <div><img src="./images/linkedin_icon.png" alt=""></div>
-                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
+                    <p><a href="www.linkedin.com/in/<br>simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
