--- a/projects/Consulting_Project/index.html
+++ b/projects/Consulting_Project/index.html
@@ -19,16 +19,16 @@
             <div class="col-md-4 top-line"></div>
         </div>
 
-        <div class="row mt-5 d-flex flex-md-row flex-column-reverse">
-            <div class="col-md-7 col-sm-12 d-flex flex-column justify-content-center align-items-end">
+        <div class="row mt-5 d-flex flex-md-row flex-column-reverse ">
+            <div class="col-md-7 d-flex flex-column justify-content-center align-items-end mw-100">
                 <div class="text_container text-end">
                     <h1>ייעוץ חינם</h1>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
                 </div>
 
                 <div class="form d-flex flex-column text-end">
-                    <div class="row">
-                        <div class="col d-flex flex-column ">
+                    <div class="row flex-row-reverse">
+                        <div class="col d-flex flex-column">
                             <label for="name">שם מלא</label>
                             <input type="text" class="field">
                         </div>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="col phone_box">
-                <img src="./images/Image 1.png" alt="phone" class="phone">
+                <img src="./images/Image 1.png" alt="phone" class="phone mw-100">
             </div>
         </div>
 
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mb-4">
             <div class="col-7 position-fixed bottom-0 bottom-line"></div>
         </div>
     </div>
