--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="nav_container sticky-top">
         <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-50">
             <div class="container">
-                <img src="./images/logo1.png" alt="Logo" class="ms-5 logo">
+                <img src="./images/logo.png" alt="Logo" class="ms-5 logo">
                 <a class="navbar-brand ms-md-3" href="index.html">
                     Simcha Lapp
                 </a>
@@ -70,7 +70,8 @@
                 <div class="aboutMe_text">
                     <h2 class="josefin-bold">About Me</h2>
                     <p class="josefin-light">I am studying to be a fullstack web developer with a focus on beautiful and
-                        visually complex designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also done some studying of UI design and am familiar with Figma and Adobe Illustrator.
+                        visually complex designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also
+                        done some studying of UI design and am familiar with Figma and Adobe Illustrator.
                     </p>
                     <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my
                             resume</a></button>
