project 8 and fixes

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title josefin-bold">Delivery Company Homepage</h3>
                     <p class="josefin-light"> class="josefin-light"Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit.
-                        <p />
+                        elit.<p/>
                         <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
                 </div>
             </div>
@@ -136,6 +135,15 @@
                     <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
                         and SASS.</p>
                     <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
+                </div>
+            </div>
+
+            <div class="project_card">
+                <div class="project_card_img"><img src="./images/mall.jpg" alt=""></div>
+                <div class="project_card_text">
+                    <h3 class="project_card_title josefin-bold">Gift Card Sign Up Page</h3>
+                    <p class="josefin-light">A summery and young sign up page. Built with HTML, CSS, and SASS.</p>
+                    <button class="btn_styling"><a href="./html/giftcardProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -209,7 +217,7 @@
                 </div>
                 <div class="footer_items linked_in">
                     <div><img src="./images/linkedin_icon.png" alt=""></div>
-                    <p><a href="www.linkedin.com/in/<br>simcha-lapp-0b4081106">LinkedIn Profile</a></p>
+                    <p><a href="www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
