--- a/html/codingProjectPage.html
+++ b/html/codingProjectPage.html
@@ -14,35 +14,34 @@
 </head>
 
 <body>
-    <header id="header_section">
-        <header class="nav_container sticky-top">
-            <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
-                <div class="container">
-                    <a class="navbar-brand fs-5 ms-md-3 " href="../index.html">
-                        <img src="../images/logo1.png" alt="Logo" class="ms-5 monogram">
-                        Simcha Lapp
-                    </a>
-        
-                    <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav gap-2 ms-auto text-center">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href=""></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href=""></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href=""></a>
-                            </li>
-                        </ul>
-                    </div> -->
-                </div>
-            </nav>
-    </header>
+<header class="nav_container sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-50">
+        <div class="container">
+            <img src="../images/logo.png" alt="Logo" class="ms-5 logo">
+            <a class="navbar-brand ms-md-3" href="../index.html">
+                Simcha Lapp
+            </a>
+
+            <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav gap-2 ms-auto text-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#my_projects">My Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact_section">Contact</a>
+                        </li>
+                    </ul>
+                </div> -->
+        </div>
+    </nav>
+</header>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
@@ -57,16 +56,14 @@
         </div>
     </section>
 
-    <section id="icon_section">
-        <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="../images/img-HTML.png" alt="html icon"></div>
-            <div class="coding_icons"><img src="../images/img-CSS.png" alt="css icon"></div>
-            <div class="coding_icons"><img src="../images/img-SASS.png" alt="css icon"></div>
-        </div>
+    <section class="project_icon_container">
+        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-4x fa-sass"></i></div>
     </section>
 
 
-    <section id="project_section">
+    <section class="project_preview">
         <img src="../images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
         <img src="../images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
@@ -95,7 +92,8 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
