--- a/html/giftcardProjectPage.html
+++ b/html/giftcardProjectPage.html
@@ -9,9 +9,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
-    
 </head>
 
 <body>
@@ -24,35 +25,36 @@
                 </a>
     
                 <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-auto text-center">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#my_projects">My Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact_section">Contact</a>
-                        </li>
-                    </ul>
-                </div> -->
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav gap-2 ms-auto text-center">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#my_projects">My Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact_section">Contact</a>
+                            </li>
+                        </ul>
+                    </div> -->
             </div>
         </nav>
     </header>
 
-    <section id="hero_section">
+
+    <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <h1 class="hero_header">Delivery Service Homepage</h1>
-                <p class="header_text">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
+                <h1 class="hero_header josefin-slab">Gift Card Sign Up Form</h1>
+                <p class=" header_text josefin-sans">A sign gift card sign up page with a summer vibe.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="../projects/Delivery_Project/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Giftcard_Project/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
@@ -60,27 +62,28 @@
     <section class="project_icon_container">
         <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
         <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x fa-bootstrap"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-4x fa-sass"></i></div>
     </section>
 
     <section class="project_preview">
-        <img src="../images/project5_snip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../images/project5_snip_mobile.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/giftcardProjectSnip.png" alt="project screenshot" class="screenshot d-none d-md-block ">
+        <img src="../images/giftcardProjectMobileSnip.png" alt="project screenshot "
+            class="screenshot d-md-none d-sm-block ">
     </section>
 
     <footer>
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="../images/email_icon.png" alt="email icon"></div>
+                    <div><img src="../images/email_icon.png" alt=""></div>
                     <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="../images/phone_icon.png" alt="phone icon"></div>
+                    <div><img src="../images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="../images/linkedin_icon.png" alt="linkedin icon"></div>
+                    <div><img src="../images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
