--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         </nav>
     </header>
 
-
     <section id="hero_section">
         <div class="hero_box">
             <div class="hero_img">
@@ -73,15 +72,15 @@
                         visually complex designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also
                         done some studying of UI design and am familiar with Figma and Adobe Illustrator.
                     </p>
-                    <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my
-                            resume</a></button>
+                    <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp CV">Download my
+                            CV</a></button>
 
                     <div class="icon_container">
                         <div class="coding_icons"><i class="fa-brands fa-3x fa-figma"></i></div>
                         <div class="coding_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
                         <div class="coding_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
                         <div class="coding_icons"><i class="fa-brands fa-3x fa-bootstrap"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-sass"></i></div>
+                        <div class="coding_icons" id="icon"><i class="fa-brands fa-3x fa-sass"></i></div>
                         <div class="coding_icons"><i class="fa-brands fa-3x fa-js"></i></div>
                         <div class="coding_icons"><i class="fa-brands fa-3x fa-node"></i></div>
                         <div class="coding_icons"><i class="fa-brands fa-3x fa-react"></i></div>
@@ -103,81 +102,92 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title josefin-bold">Delivery Company Homepage</h3>
                     <p class="josefin-light"> class="josefin-light"Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit.<p/>
+                        elit.
+                        <p />
                         <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Travel Agency Contact Page</h3>
-                    <p class="josefin-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
-                </div>
+            <div class="project_card"></div>
+            <div class="project_card_img"><img src="./images/Coffee.png" alt="" class="cardimg"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Coffee Coupon Sign Up</h3>
+                <p class="josefin-light"> A clean and beautiful sign up to receive a coupon for a free coffee.
+                    <p />
+                    <button class="btn_styling"><a href="./html/coffeeProjectPage.html">Project Page</a></button>
             </div>
+        </div>
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="./images/coding_background.jpg" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Coding Course Sign Up</h3>
-                    <p class="josefin-light">A sign up for a coding course with a bright and abstract design. Built with
-                        HTML, CSS, and SASS.
-                    </p>
-                    <button class="btn_styling"><a href="./html/codingProjectPage.html">Project Page</a></button>
-                </div>
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Travel Agency Contact Page</h3>
+                <p class="josefin-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
             </div>
+        </div>
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Consulting Firm Contact Page</h3>
-                    <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
-                        and SASS.</p>
-                    <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
-                </div>
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/coding_background.jpg" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Coding Course Sign Up</h3>
+                <p class="josefin-light">A sign up for a coding course with a bright and abstract design. Built with
+                    HTML, CSS, and SASS.
+                </p>
+                <button class="btn_styling"><a href="./html/codingProjectPage.html">Project Page</a></button>
             </div>
+        </div>
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="./images/mall.jpg" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Gift Card Sign Up Page</h3>
-                    <p class="josefin-light">A summery and young sign up page. Built with HTML, CSS, and SASS.</p>
-                    <button class="btn_styling"><a href="./html/giftcardProjectPage.html">Project Page</a></button>
-                </div>
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Consulting Firm Contact Page</h3>
+                <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
+                    and SASS.</p>
+                <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
             </div>
+        </div>
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
-
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Basketball League Login Page</h3>
-                    <p class="josefin-light"> A youthful and fun login page for a summer basketball league. Built
-                        with HTML and CSS.</p>
-                    <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
-                </div>
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/mall.jpg" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Gift Card Sign Up Page</h3>
+                <p class="josefin-light">A summery and young sign up page. Built with HTML, CSS, and SASS.</p>
+                <button class="btn_styling"><a href="./html/giftcardProjectPage.html">Project Page</a></button>
             </div>
+        </div>
 
-            <div class="project_card" id="project_card3">
-                <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Zoo Newsletter</h3>
-                    <p class="josefin-light">An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML
-                        and CSS.</p>
-                    <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
-                </div>
-            </div>
+        <div class="project_card">
+            <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
 
-            <div class="project_card">
-                <div class="project_card_img cardimg"><img src="./images/coins.jpg" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title josefin-bold">Currency Exchange</h3>
-                    <p class="josefin-light">Modern and clean sign in for an online currrency exchange. Built with HTML,
-                        CSS, and Bootstrap.
-                    </p>
-                    <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
-                </div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Basketball League Login Page</h3>
+                <p class="josefin-light"> A youthful and fun login page for a summer basketball league. Built
+                    with HTML and CSS.</p>
+                <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
             </div>
+        </div>
+
+        <div class="project_card" id="project_card3">
+            <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Zoo Newsletter</h3>
+                <p class="josefin-light">An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML
+                    and CSS.</p>
+                <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
+
+        <div class="project_card">
+            <div class="project_card_img cardimg"><img src="./images/coins.jpg" alt=""></div>
+            <div class="project_card_text">
+                <h3 class="project_card_title josefin-bold">Currency Exchange</h3>
+                <p class="josefin-light">Modern and clean sign in for an online currrency exchange. Built with HTML,
+                    CSS, and Bootstrap.
+                </p>
+                <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
+            </div>
+        </div>
 
         </div>
     </section>
@@ -217,7 +227,7 @@
                 </div>
                 <div class="footer_items linked_in">
                     <div><img src="./images/linkedin_icon.png" alt=""></div>
-                    <p><a href="www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
+                    <p><a href="https://www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
