currency project redo

--- a/html/currencyProjectPage.html
+++ b/html/currencyProjectPage.html
@@ -9,7 +9,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 
@@ -21,7 +23,7 @@
                 <a class="navbar-brand ms-md-3" href="../index.html">
                     Simcha Lapp
                 </a>
-    
+
                 <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -46,12 +48,13 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <h1 class="hero_header"">Online Currency Exchange Login</h1>
-                <p class=" header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h1 class="hero_header"">Cryptocurrency Exchange Homepage</h1>
+                <p class=" header_text"">A modern homepage for a cryptocurrency exchange website.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="../projects/Currency_Project/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Currency_Project/index.html">View the project
+                        page</a></button>
             </div>
         </div>
     </section>
@@ -60,10 +63,11 @@
         <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
         <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
         <div class="project_icons"><i class="fa-brands fa-4x fa-sass"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-4x fab fa-bootstrap"></i></div>
     </section>
 
     <section class="project_preview">
-        <img src="../images/project4_snip.png" alt="project 4 screenshot" class="screenshot d-md-block d-none">
+        <img src="../images/currencyProjectSnip.png" alt="project 4 screenshot" class="screenshot d-md-block d-none">
         <img src="../images/project4_snip_mobile.png" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
