--- a/projects/Coffee_Project/index.html
+++ b/projects/Coffee_Project/index.html
@@ -29,7 +29,7 @@
 
                 <div class="field">
                     <label for="email" class="email">דוא״ל</label>
-                    <input type="text" class="email">
+                    <input type="text" class="email" required>
                 </div>
 
                 <button type="submit" class="submit">שליחה</button>
