--- a/projects/Currency_Project/index.html
+++ b/projects/Currency_Project/index.html
@@ -8,54 +8,89 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
 </head>
 </head>
 
 <body>
-    <div class="row m-0 p-0">
-        <div class="col-md-7">
-            <div id="carouselExampleAutoplaying" class="w-100 carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./images/zloty.jpg" class="d-block w-100" alt="polish money">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./images/coins.jpg" class="d-block w-100" alt="coins">
-                    </div>
-                    <div class="carousel-item money3">
-                        <img src="./images/dollars.jpg" class="d-block w-100" alt="US dollars">
-                    </div>
+
+    <nav class="navbar navbar-expand-md bg-transparent border">
+        <div class="container oxanium-bold">
+            <a class="navbar-brand kripto" href="#">Kripto</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarNav">
+                <div class="ms-auto">
+                    <ul class="navbar-nav gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold" aria-current="page" href="#">Explore</a>
+                        </li>
+                        <li class="nav-item"> 
+                            <a class="nav-link fw-bold" href="#">Learn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Individuals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Business</a>
+                        </li>
+                    </ul>
                 </div>
+
+                <div class="ms-auto">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" class="btn btn-outline-primary">Sign up</button>
+                </div>
+
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container hero d-flex align-items-center">
+        <div class="login d-flex flex-column align-items-center w-50 gap-4">
+            <div class="w-75">
+                <h1 class="oxanium-light">The future of banking has begun. <span class="kripto oxanium-bold">Kripto.</span></h1>
+                <p>The most secure and intuitive platform to trade cryptocurrency.</p>
+            </div>
+
+
+            <form class="w-75">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <div class="d-flex gap-3">
+                        <input type="email" class="form-control w-75" id="exampleInputEmail1"
+                            aria-describedby="emailHelp" placeholder="johndoe@kripto.com">
+                        <button type="submit" class="btn btn-primary">Sign up</button>
+                    </div>
+
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+            </form>
+        </div>
+
+        <div class="d-flex flex-column justify-content-center container w-50 me-5">
+            <div class="row mb-3 gap-3">
+                <div class="col img1"></div>
+                <div class="col img2"></div>
+            </div>
+            <div class="row gap-3">
+                <div class="col img3"></div>
+                <div class="col img4"></div>
             </div>
         </div>
 
-        <form class="col-md-5 ">
-            <div class="d-flex flex-column border border-success-subtle p-2 rounded-4">
-                <h2 class="text-center">The Online Exchange</h2>
-                <img src="./images/money_exchange.png" alt="" class="mx-auto py-3">
-                <h3>Sign in to your account</h3>
-                <div class="mb-3 w-75">
-                    <label for="exampleInputEmail1" class="form-label d-none d-md-block">Email address</label>
-                    <input type="email" class="form-control border-black" id="exampleInputEmail1"
-                        aria-describedby="emailHelp" placeholder="Email">
-                </div>
-
-                <div class="mb-2 w-75">
-                    <label for="exampleInputPassword1" class="form-label d-none d-md-block">Password</label>
-                    <input type="password" class="form-control border-black" id="exampleInputPassword1" placeholder="Password">
-                </div>
-
-                <div class="mb-md-3 mb-sm-1 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                </div>
-
-                <button type="submit" class="btn btn-success w-50 mb-2">Login</button>
-                <a href="">Forgot your password?</a>
-            </div>
-        </form>
-        
     </div>
+
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
