--- a/html/currencyProjectPage.html
+++ b/html/currencyProjectPage.html
@@ -16,33 +16,15 @@
 </head>
 
 <body>
-    <header class="nav_container sticky-top">
-        <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-50">
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <img src="../images/logo.png" alt="Logo" class="ms-5 logo">
-                <a class="navbar-brand ms-md-3" href="../index.html">
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="../index.html">
+                    <div class="logo"> <img src="../images/logo.png" alt="logo"></div>
                     Simcha Lapp
                 </a>
-
-                <!-- <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav gap-2 ms-auto text-center">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#my_projects">My Projects</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact_section">Contact</a>
-                            </li>
-                        </ul>
-                    </div> -->
             </div>
-        </nav>
+          </nav>
     </header>
 
     <section id="hero_section" class="project_text">
