--- a/index.html
+++ b/index.html
@@ -17,35 +17,25 @@
 </head>
 
 <body id="home">
-    <header class="nav_container sticky-top">
-        <nav class="navbar navbar-expand-lg sticky-top">
-            <div class="container align-items-center justify-content-center ">
-                
-                <a class="navbar-brand text-white" href="index.html">
-                <div></div>
-                Simcha Lapp
-                </a>
-
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-auto text-center ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#my_projects">My Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact_section">Contact</a>
-                        </li>
-                    </ul>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container">
+              <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="#">
+                <div class="logo"> <img src="./images/logo.png" alt="logo"></div>
+                Simcha Lapp</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                  <a class="nav-link" href="#home">Home</a>
+                  <a class="nav-link" href="#aboutMe_section">About Me</a>
+                  <a class="nav-link" href="#projects">Projects</a>
+                  <a class="nav-link" href="#contact_section">Contact</a>
                 </div>
+              </div>
             </div>
-        </nav>
+          </nav>
     </header>
 
     <section id="hero_section">
@@ -93,7 +83,7 @@
         </div>
     </section>
 
-    <section id="my_projects" class="project_section">
+    <section id="projects" class="project_section">
         <h2 class="project_header josefin-bold">My Projects</h2>
 
         <div class="project_card_area">
